--- a/components/veritiTable/VeritiTable.module.scss
+++ b/components/veritiTable/VeritiTable.module.scss
@@ -1,44 +1,24 @@
 .container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  &_titleSection {
     display: flex;
-    flex-direction: column;
-    // justify-content: center;
-    // align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 16px;
+    align-items: center;
 
-    &_titleSection{
-        display: flex;
-        flex-direction: row;
-        /*two elements at the edges*/
-        // justify-content: space-between;
-        // align-items: center;
-        /*end two elements at the edges*/
-
-
-
-
-
-        // justify-content: space-between;
-        // align-items: center;
-        // margin-bottom: 20px;
-        &_title{
-            font-size: 24px;
-            display: flex;
-            /*left upper corner*/
-            // justify-content: start;
-            // align-items: start;
-            
-            // font-weight: 600;
-        }
-        &_counter{
-            font-size: 16px;
-            display: flex;
-
-            // font-weight: 600;
-        }
-        
+    &_title {
+      font-size: 24px;
     }
-  
+    &_counter {
+      font-size: 16px;
+      margin-right: 8px;
+    }
   }
-  
+}
