--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -1,13 +1,9 @@
 .container {
-  padding: 0;
-  &_h1 {
-    display: flex;
-    flex-direction: column;
-    // justify-content: start;
-    align-items: start;
-    height: 100vh;
-    margin: auto;
-    text-align: center;
-    font-size: 24px;
-  }
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
